Style changes and fixed issue with input on static form

--- a/ui/src/assets/slider.css
+++ b/ui/src/assets/slider.css
@@ -62,6 +62,7 @@
 .vue-slider:hover .vue-slider-dot-handle {
   transform: scale(1.5);
   border-color: #69c0ff;
+  cursor: grab;
 }
 
 .vue-slider-dot-handle-focus {
